--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "prepare": "husky install"
   },
   "private": true,
   "dependencies": {
@@ -18,6 +19,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "eslint": "^8.0.1",
     "ngx-spinner": "^14.0.0",
     "primeflex": "^3.2.1",
     "primeicons": "^5.0.0",
@@ -32,6 +34,11 @@
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "eslint-config-standard-with-typescript": "^22.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
     "husky": "^8.0.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
@@ -42,6 +49,10 @@
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "tslib": "^2.4.0",
-    "typescript": "~4.6.4"
+    "typescript": "*"
+  },
+  "lint-staged": {
+    "*": "prettier --write",
+    "*.ts": "eslint --fix"
   }
 }
